# Drama-Skit-Script-AI-Generator

./: .gitignore  CHANGELOG  CONTRIBUTING.md  Drama.gitignore  LICENSE  README.md  REPORT.md  app.py  pyproject.toml  requirements.txt
.gitlab/issue_templates/: Bug.md  Default.md  Documentation.md  Feature Request.md  Refactoring.md
.gitlab/merge_request_templates/: default.md  documentation_update.md
Ruff in .vscode/: extensions.json
